Undo JDK-8245000: Windows GDI functions don't support large pages

XMLWordPrintable

    • gc
    • b14

        JDK-8245000 was created as a workaround for problems with GDI and large pages. A more narrow workaround in the java2d code was then implemented and pushed for JDK-8240654. Because of this, we don't need to turn off large pages on Windows anymore.

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: