8252367: Undo JDK-8245000: Windows GDI functions don't support large pages

Reviewed-by: eosterlund, sjohanss